manifests/showks-canvas-jun10402/manifest.yaml
---
# Source: showks-canvas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-canvas-jun10402-temp
  namespace: showks
  labels:
    app: showks-canvas-jun10402-temp
    class: showks-canvas
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: app-port
  selector:
    app: showks-canvas-jun10402-temp

---
# Source: showks-canvas/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-canvas-jun10402-temp
  namespace: showks
  labels:
    app: showks-canvas-jun10402-temp
    class: showks-canvas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-canvas-jun10402-temp
  template:
    metadata:
      labels:
        app: showks-canvas-jun10402-temp
        class: showks-canvas
    spec:
      containers:
        - name: showks-canvas-jun10402-temp
          image: containerdaysjp/showks-canvas-jun10402:stg-fe061602388e44ae5814b0c39b4bf317ac632ff1
          ports:
            - name: app-port
              containerPort: 8080
              protocol: TCP

---
# Source: showks-canvas/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-canvas-jun10402-temp
  namespace: showks
  labels:
    class: showks-canvas
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: showks-canvas-jun10402.stg.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-jun10402-temp
          servicePort: 8080
  - host: showks-canvas-jun10402.prod.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-jun10402-temp
          servicePort: 8080
